plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.20.0'
}

group = 'org.affinity'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.maven.apache.org/maven2' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.flywaydb:flyway-mysql'
	implementation 'com.auth0:java-jwt:4.4.0'
	implementation 'com.google.code.gson:gson:2.10.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

spotless {
	java {
		// Target all Java files in the project, excluding build directories
		target fileTree('.') {
			include '**/*.java'
			exclude '**/build/**', '**/build-*/**', '**/bin/**'
		}

		// Apply Google Java Format
		googleJavaFormat()

		// Remove unused imports
		removeUnusedImports()

		// Ensure consistent line endings
		trimTrailingWhitespace()
		endWithNewline()

		// Optional: Add a license header
			licenseHeader '/*\n  Copyright $YEAR, RDating. All rights reserved.\n*/' // Example license header
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
